@@ -1,3 +1,12 @@
+2019-05-25  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	Use G_DECLARE_FINAL_TYPE to declare LibBalsaAddressBookRubrica
+
+	Make the structure private; no need for getters and setters.
+
+	* libbalsa/address-book-rubrica.c:
+	* libbalsa/address-book-rubrica.h:
+
 2019-05-22  Albrecht Dreß  <albrecht.dress@arcor.de>
 
 	Mitigate “Re: What's Up Johnny?” vulnerabilities
